--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-router": "^3.0.7",
-    "vuetify": "^1.5.5"
+    "vuetify": "^1.5.5",
+    "webpack": "^4.0.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.9.0",
     "@vue/cli-plugin-babel": "^3.9.0",
     "@vue/cli-plugin-eslint": "^3.9.0",
     "@vue/cli-service": "^3.9.0",
