--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "core-js": "^2.6.5",
     "ibm-watson": "^4.2.6",
     "vue": "^2.6.10",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.7",
     "vuetify": "^1.5.5",
-    "webpack": "^4.0.0"
+    "webpack": "^4.37.0"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.9.0",
     "@vue/cli-plugin-babel": "^3.9.0",
     "@vue/cli-plugin-eslint": "^3.9.0",
-    "@vue/cli-service": "^3.9.0",
+    "@vue/cli-service": "^3.9.3",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
